--- a/cyztookit/res/values/strings.xml
+++ b/cyztookit/res/values/strings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<resources>
-
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="hello_activity_text_text">Hello, World!</string>
+    <!-- ThirdActivity TextView Loading Progress -->
+    <string name="thirdActivityLoading">
+        正在加载中：<xliff:g id="loadingnum" example="100">%1$n</xliff:g>%
+    </string>
 
 </resources>
