--- a/cyztookit/res/values/strings.xml
+++ b/cyztookit/res/values/strings.xml
@@ -5,5 +5,16 @@
     <string name="thirdActivityLoading">
         正在加载中：<xliff:g id="loadingnum" example="100">%1$n</xliff:g>%
     </string>
+    <!-- ThirdActivity Log Text -->
+    <string name="thirdActivityLogText">
+        mtid:<xliff:g id="MainThreadID" example="23">%1$n</xliff:g>\n
+        ttid:<xliff:g id="ThreadThreadID" example="33">%2$n</xliff:g>\n
+        htid:<xliff:g id="HandleThreadID" example="34">%3$n</xliff:g>
+    </string>
+    <!-- activity_camera 打开摄像头按钮 -->
+    <string name="activityCameraBtnOpenStr">
+        打开摄像头
+    </string>
+    <!-- activity_camera 摄像头返回图片替代文本 -->
 
 </resources>
