--- a/cyztookit/res/values/strings.xml
+++ b/cyztookit/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="hello_activity_text_text">Hello, World!</string>
     <!-- ThirdActivity TextView Loading Progress -->
     <string name="thirdActivityLoading">
-        正在加载中：<xliff:g id="loadingnum" example="100">%1$d</xliff:g>\%
+        正在加载中：<xliff:g id="loadingnum" example="100">%1$d</xliff:g>%%
     </string>
     <!-- ThirdActivity Log Text -->
     <string name="thirdActivityLogText">
