--- a/cyztookit/res/values/strings.xml
+++ b/cyztookit/res/values/strings.xml
@@ -160,6 +160,9 @@
     <string name="btn4">
 	    按钮4
     </string>
+    <string name="example_fragment_simpletxt">
+        Hello Fragment!
+    </string>
 
     
 
