frag button add

--- a/cyztookit/res/values/strings.xml
+++ b/cyztookit/res/values/strings.xml
@@ -163,6 +163,9 @@
     <string name="example_fragment_simpletxt">
         Hello Fragment!
     </string>
+    <string name="btnExampleFragment">
+	    Fragment Test
+    </string>
 
     
 
